# bicycle-architecture-compiler

./: .gitignore  BOSS_REVIEW.md  CLEANUP_REPORT.md  REVIEW.md  bootstrap_code.py  boss_p_report.json  c2_xyz_coverage_report.json  cleanup_report.json  codex_audit_report.md  codex_final_report.md  compare_11q_single_shot.py  compare_witness_regimes.py  emitted_isa_costs.json  explain_boss_p.py  export_gross_lift.py  export_logical_natives.py  family_crot_hit_rate.py  family_rotation_search.py  full-x_crot1_hit_report.json  full-x_rotsearch_r1.json  full-x_rotsearch_r2.json  full-xyz_crot1_hit_report.json  full-xyz_hit_report.json  full-xz_crot1_hit_report.json  full-xz_hit_report.json  full-xz_rotsearch_r1.json  full-xz_rotsearch_r2.json  full-xz_rotsearch_r3.json  full-xz_rotsearch_r4.json  full-y_crot1_hit_report.json  full-y_hit_report.json  full-z_crot1_hit_report.json  full-z_hit_report.json  full_x_c2_hit_rate.py  full_x_c2_hit_report.json  full_x_direct_hit_rate.py  full_x_direct_hit_report.json  gross_physical_lift.json  lifted_hit_test_result.json  logical_natives_gross.json  (+12 more)
crates/bicycle_cliffords/: Cargo.toml
crates/bicycle_cliffords/benches/: ours_single_shot_11q.rs  paper_baseline_11q.rs
crates/bicycle_cliffords/src/: csv_input.rs  draft_core.rs  draft_reports.rs  draft_single_shot.rs  draft_trace.rs  draft_types.rs  lib.rs  main.rs  measurement.rs  pauli_string.rs  single_shot_11q.rs
pylib/: Untitled-1  automor.py
results/benchmarks/: ours_single_shot_bench.txt  (+1 more)
scripts/: boss_check.sh  full_validation.sh  generate_boss_validation.py
(+36 files in other folders)
